--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 install(PROGRAMS
-  scripts/mic_client.py
+  scripts/mic_client.py testmic_srv.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
